added media and animations to cards

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,14 +15,13 @@
           loop
           muted="muted"
           volume="0"
-          src="https://framerusercontent.com/modules/assets/KNjmnFp5kwda6KegO13wieYyI0~X8VYXNZqrM3GjnnMxrYu-UFwPJWSO_wIyhsPF4HsDlE.mp4"
-        ></video>
+          src="https://framerusercontent.com/modules/assets/KNjmnFp5kwda6KegO13wieYyI0~X8VYXNZqrM3GjnnMxrYu-UFwPJWSO_wIyhsPF4HsDlE.mp4"></video>
         <h1>SUSHI SENSATION</h1>
       </div>
       <div class="small-card-wrapper">
-        <div class="card small-card"></div>
-        <div class="card small-card"></div>
-        <div class="card small-card"></div>
+        <div class="card small-card animate-element"></div>
+        <div class="card small-card animate-element"></div>
+        <div class="card small-card animate-element"></div>
       </div>
     </div>
   </body>
