fixed naming hover brightness animation

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,9 +19,9 @@
         <h1>SUSHI SENSATION</h1>
       </div>
       <div class="small-card-wrapper">
-        <div class="card small-card animate-element"></div>
-        <div class="card small-card animate-element"></div>
-        <div class="card small-card animate-element"></div>
+        <div class="card small-card brightness-animate-element"></div>
+        <div class="card small-card brightness-animate-element"></div>
+        <div class="card small-card brightness-animate-element"></div>
       </div>
     </div>
   </body>
