added navbar items

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -25,6 +25,11 @@
               </svg>
             </div>
             <p>QITCHEN</p>
+            <div class="nav-regular-button" id="food-menu-button">MENU</div>
+            <div class="nav-regular-button" id="about-button">ABOUT</div>
+            <div class="nav-primary-button" id="book-table-button">
+              BOOK TABLE
+            </div>
           </nav>
         </div>
         <div class="gradient"></div>
