added animations to navbar links

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,17 +17,32 @@
                 viewBox="0 0 24 24"
                 stroke-width="1.5"
                 stroke="currentColor"
-                class="size-6">
+                class="size-6"
+              >
                 <path
                   stroke-linecap="round"
                   stroke-linejoin="round"
-                  d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                  d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+                />
               </svg>
             </div>
-            <p>QITCHEN</p>
-            <div class="nav-regular-button" id="food-menu-button">MENU</div>
-            <div class="nav-regular-button" id="about-button">ABOUT</div>
-            <div class="nav-primary-button" id="book-table-button">
+            <p class="nav-header">QITCHEN</p>
+            <div
+              class="nav-regular-button regularbutton-animate-element"
+              id="food-menu-button"
+            >
+              MENU
+            </div>
+            <div
+              class="nav-regular-button regularbutton-animate-element"
+              id="about-button"
+            >
+              ABOUT
+            </div>
+            <div
+              class="nav-primary-button regularbutton-animate-element"
+              id="book-table-button"
+            >
               BOOK TABLE
             </div>
           </nav>
@@ -39,7 +54,8 @@
           loop
           muted="muted"
           volume="0"
-          src="https://framerusercontent.com/modules/assets/KNjmnFp5kwda6KegO13wieYyI0~X8VYXNZqrM3GjnnMxrYu-UFwPJWSO_wIyhsPF4HsDlE.mp4"></video>
+          src="https://framerusercontent.com/modules/assets/KNjmnFp5kwda6KegO13wieYyI0~X8VYXNZqrM3GjnnMxrYu-UFwPJWSO_wIyhsPF4HsDlE.mp4"
+        ></video>
         <h1>SUSHI SENSATION</h1>
       </div>
       <div class="small-card-wrapper">
