--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -59,9 +59,30 @@
         <h1>SUSHI SENSATION</h1>
       </div>
       <div class="small-card-wrapper">
-        <div class="card small-card brightness-animate-element"></div>
-        <div class="card small-card brightness-animate-element"></div>
-        <div class="card small-card brightness-animate-element"></div>
+        <div class="card small-card">
+          <img
+            class="brightness-animate-element"
+            src="https://framerusercontent.com/images/EKJJBnLQzSzsS1Sp8JrOMfZgqw.webp"
+            alt="sushionplate"
+          />
+          <div class="card-action-section"></div>
+        </div>
+        <div class="card small-card">
+          <img
+            class="brightness-animate-element"
+            src="https://framerusercontent.com/images/EKJJBnLQzSzsS1Sp8JrOMfZgqw.webp"
+            alt="sushionplate"
+          />
+          <div class="card-action-section"></div>
+        </div>
+        <div class="card small-card">
+          <img
+            class="brightness-animate-element"
+            src="https://framerusercontent.com/images/EKJJBnLQzSzsS1Sp8JrOMfZgqw.webp"
+            alt="sushionplate"
+          />
+          <div class="card-action-section"></div>
+        </div>
       </div>
     </div>
   </body>
