--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -65,23 +65,71 @@
             src="https://framerusercontent.com/images/EKJJBnLQzSzsS1Sp8JrOMfZgqw.webp"
             alt="sushionplate"
           />
-          <div class="card-action-section"></div>
+          <div class="card-action-section">
+            <p>MENU</p>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+              />
+            </svg>
+          </div>
         </div>
         <div class="card small-card">
           <img
             class="brightness-animate-element"
-            src="https://framerusercontent.com/images/EKJJBnLQzSzsS1Sp8JrOMfZgqw.webp"
+            src="https://framerusercontent.com/images/slPotYXPFXAfEsa1a4GJhZIk.webp"
             alt="sushionplate"
           />
-          <div class="card-action-section"></div>
+          <div class="card-action-section">
+            <p>RESERVE TABLE</p>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+              />
+            </svg>
+          </div>
         </div>
         <div class="card small-card">
           <img
             class="brightness-animate-element"
-            src="https://framerusercontent.com/images/EKJJBnLQzSzsS1Sp8JrOMfZgqw.webp"
+            src="https://framerusercontent.com/images/InB1qO4eodYHQXKOVBszhLURHE.webp"
             alt="sushionplate"
           />
-          <div class="card-action-section"></div>
+          <div class="card-action-section">
+            <p>GALLERY</p>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+              />
+            </svg>
+          </div>
         </div>
       </div>
     </div>
