--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,130 +6,52 @@
     <title></title>
   </head>
   <body>
-    <div class="main-wrapper">
-      <div class="card big-card">
-        <div class="nav-wrapper">
-          <nav class="navbar" id="big-card-nav">
-            <div class="menu-button">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                class="size-6"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
-                />
-              </svg>
-            </div>
-            <p class="nav-header">QITCHEN</p>
-            <div
-              class="nav-regular-button regularbutton-animate-element"
-              id="food-menu-button"
-            >
-              MENU
-            </div>
-            <div
-              class="nav-regular-button regularbutton-animate-element"
-              id="about-button"
-            >
-              ABOUT
-            </div>
-            <div
-              class="nav-primary-button regularbutton-animate-element"
-              id="book-table-button"
-            >
-              BOOK TABLE
-            </div>
-          </nav>
+    <div class="nav-wrapper">
+      <nav class="navbar" id="big-card-nav">
+        <div class="menu-button">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+            />
+          </svg>
         </div>
-        <div class="gradient"></div>
-        <video
-          preload="auto"
-          autoplay
-          loop
-          muted="muted"
-          volume="0"
-          src="https://framerusercontent.com/modules/assets/KNjmnFp5kwda6KegO13wieYyI0~X8VYXNZqrM3GjnnMxrYu-UFwPJWSO_wIyhsPF4HsDlE.mp4"
-        ></video>
-        <h1>SUSHI SENSATION</h1>
+        <p class="nav-header">QITCHEN</p>
+        <div
+          class="nav-regular-button regularbutton-animate-element"
+          id="food-menu-button"
+        >
+          MENU
+        </div>
+        <div
+          class="nav-regular-button regularbutton-animate-element"
+          id="about-button"
+        >
+          ABOUT
+        </div>
+        <div
+          class="nav-primary-button regularbutton-animate-element"
+          id="book-table-button"
+        >
+          BOOK TABLE
+        </div>
+      </nav>
+    </div>
+    <div id="content" class="main-wrapper">
+      <div class="left-attraction-image">
+        <h1>MENU</h1>
       </div>
-      <div class="small-card-wrapper">
-        <div class="card small-card">
-          <img
-            class="brightness-animate-element"
-            src="https://framerusercontent.com/images/EKJJBnLQzSzsS1Sp8JrOMfZgqw.webp"
-            alt="sushionplate"
-          />
-          <div class="card-action-section">
-            <p>MENU</p>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="size-6"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
-              />
-            </svg>
-          </div>
-        </div>
-        <div class="card small-card">
-          <img
-            class="brightness-animate-element"
-            src="https://framerusercontent.com/images/slPotYXPFXAfEsa1a4GJhZIk.webp"
-            alt="sushionplate"
-          />
-          <div class="card-action-section">
-            <p>RESERVE TABLE</p>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="size-6"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
-              />
-            </svg>
-          </div>
-        </div>
-        <div class="card small-card">
-          <img
-            class="brightness-animate-element"
-            src="https://framerusercontent.com/images/InB1qO4eodYHQXKOVBszhLURHE.webp"
-            alt="sushionplate"
-          />
-          <div class="card-action-section">
-            <p>GALLERY</p>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke-width="1.5"
-              stroke="currentColor"
-              class="size-6"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
-              />
-            </svg>
-          </div>
+      <div class="right-section-menu">
+        <div class="maki-section">
+          <h1>MAKI</h1>
         </div>
       </div>
     </div>
