added navbar functionality

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="nav-wrapper">
       <nav class="navbar" id="big-card-nav">
-        <div class="menu-button">
+        <div class="navigation-button">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
@@ -24,9 +24,9 @@
             />
           </svg>
         </div>
-        <p class="nav-header">QITCHEN</p>
+        <p class="homeclick-button nav-header">QITCHEN</p>
         <div
-          class="nav-regular-button regularbutton-animate-element"
+          class="menuclick-button nav-regular-button regularbutton-animate-element"
           id="food-menu-button"
         >
           MENU
