fixed menu not staying sticky

--- a/src/pages/menu.html
+++ b/src/pages/menu.html
@@ -2,7 +2,62 @@
   <h1>MENU</h1>
 </div>
 <div class="right-section-menu">
-  <div class="maki-section">
+  <div class="filter-section">
+    <div class="filter-button nav-primary-button regularbutton-animate-element">
+      MAKI
+    </div>
+    <div class="filter-button nav-primary-button regularbutton-animate-element">
+      URAMAKI
+    </div>
+    <div class="filter-button nav-primary-button regularbutton-animate-element">
+      SPECIAL ROLLS
+    </div>
+  </div>
+  <div id="maki-section" class="maki-section">
     <h1>MAKI</h1>
+    <div class="maki-content">
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+    </div>
+  </div>
+
+  <div id="uramaki-section" class="uramaki-section">
+    <h1>MAKI</h1>
+    <div class="uramaki-content">
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+    </div>
+  </div>
+
+  <div id="specialrolls-section" class="specialrolls-section">
+    <h1>MAKI</h1>
+    <div class="specialrolls-content">
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+      <h3>content</h3>
+    </div>
   </div>
 </div>
