--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -45,76 +45,6 @@
         </div>
       </nav>
     </div>
-    <div id="content" class="main-wrapper">
-      <div class="left-attraction-image">
-        <h1>MENU</h1>
-      </div>
-      <div class="right-section-menu">
-        <div class="filter-section">
-          <div
-            class="filter-button nav-primary-button regularbutton-animate-element"
-          >
-            MAKI
-          </div>
-          <div
-            class="filter-button nav-primary-button regularbutton-animate-element"
-          >
-            URAMAKI
-          </div>
-          <div
-            class="filter-button nav-primary-button regularbutton-animate-element"
-          >
-            SPECIAL ROLLS
-          </div>
-        </div>
-        <div id="maki-section" class="maki-section">
-          <h1>MAKI</h1>
-          <div class="maki-content">
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-          </div>
-        </div>
-
-        <div id="uramaki-section" class="uramaki-section">
-          <h1>MAKI</h1>
-          <div class="uramaki-content">
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-          </div>
-        </div>
-
-        <div id="specialrolls-section" class="specialrolls-section">
-          <h1>MAKI</h1>
-          <div class="specialrolls-content">
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-            <h3>content</h3>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div id="content" class="main-wrapper"></div>
   </body>
 </html>
