made it a little responsive, still learning

--- a/src/pages/menu.html
+++ b/src/pages/menu.html
@@ -13,51 +13,259 @@
       SPECIAL ROLLS
     </div>
   </div>
-  <div id="maki-section" class="maki-section">
-    <h1>MAKI</h1>
-    <div class="maki-content">
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
+
+  <div id="maki-section" class="menu-food-section">
+    <div class="food-section-title">
+      <hr />
+      <h3>MAKI</h3>
+      <hr />
+    </div>
+    <div class="content-section">
+      <div class="content-item">
+        <img
+          src="https://framerusercontent.com/images/QAnUAEBWAkCE4NM4Ja4aQy9Tu4.webp"
+          alt="spicy-tuna-maki"
+        />
+        <div class="content-item-info">
+          <div class="content-item-title-price">
+            <h3>SPICY TUNA MAKI</h3>
+          </div>
+          <p class="content-item-info">
+            A tantalizing blend of spicy tuna, cucumber, and avocado,
+            harmoniously rolled in nori and seasoned rice.
+          </p>
+        </div>
+      </div>
+      <div class="content-item">
+        <img
+          src="https://framerusercontent.com/images/QAnUAEBWAkCE4NM4Ja4aQy9Tu4.webp"
+          alt="spicy-tuna-maki"
+        />
+        <div class="content-item-info">
+          <div class="content-item-title-price">
+            <h3>SPICY TUNA MAKI</h3>
+          </div>
+          <p class="content-item-info">
+            A tantalizing blend of spicy tuna, cucumber, and avocado,
+            harmoniously rolled in nori and seasoned rice.
+          </p>
+        </div>
+      </div>
+      <div class="content-item">
+        <img
+          src="https://framerusercontent.com/images/QAnUAEBWAkCE4NM4Ja4aQy9Tu4.webp"
+          alt="spicy-tuna-maki"
+        />
+        <div class="content-item-info">
+          <div class="content-item-title-price">
+            <h3>SPICY TUNA MAKI</h3>
+          </div>
+          <p class="content-item-info">
+            A tantalizing blend of spicy tuna, cucumber, and avocado,
+            harmoniously rolled in nori and seasoned rice.
+          </p>
+        </div>
+      </div>
+      <div class="content-item">
+        <img
+          src="https://framerusercontent.com/images/QAnUAEBWAkCE4NM4Ja4aQy9Tu4.webp"
+          alt="spicy-tuna-maki"
+        />
+        <div class="content-item-info">
+          <div class="content-item-title-price">
+            <h3>SPICY TUNA MAKI</h3>
+          </div>
+          <p class="content-item-info">
+            A tantalizing blend of spicy tuna, cucumber, and avocado,
+            harmoniously rolled in nori and seasoned rice.
+          </p>
+        </div>
+      </div>
+      <div class="content-item">
+        <img
+          src="https://framerusercontent.com/images/QAnUAEBWAkCE4NM4Ja4aQy9Tu4.webp"
+          alt="spicy-tuna-maki"
+        />
+        <div class="content-item-info">
+          <div class="content-item-title-price">
+            <h3>SPICY TUNA MAKI</h3>
+          </div>
+          <p class="content-item-info">
+            A tantalizing blend of spicy tuna, cucumber, and avocado,
+            harmoniously rolled in nori and seasoned rice.
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 
-  <div id="uramaki-section" class="uramaki-section">
-    <h1>MAKI</h1>
-    <div class="uramaki-content">
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
+  <div id="uramaki-section" class="menu-food-section">
+    <div class="food-section-title">
+      <hr />
+      <h3>URAMAKI</h3>
+      <hr />
+    </div>
+    <div class="content-section">
+      <div class="content-item">
+        <img
+          src="https://framerusercontent.com/images/QAnUAEBWAkCE4NM4Ja4aQy9Tu4.webp"
+          alt="spicy-tuna-maki"
+        />
+        <div class="content-item-info">
+          <div class="content-item-title-price">
+            <h3>SPICY TUNA MAKI</h3>
+          </div>
+          <p class="content-item-info">
+            A tantalizing blend of spicy tuna, cucumber, and avocado,
+            harmoniously rolled in nori and seasoned rice.
+          </p>
+        </div>
+      </div>
+      <div class="content-item">
+        <img
+          src="https://framerusercontent.com/images/QAnUAEBWAkCE4NM4Ja4aQy9Tu4.webp"
+          alt="spicy-tuna-maki"
+        />
+        <div class="content-item-info">
+          <div class="content-item-title-price">
+            <h3>SPICY TUNA MAKI</h3>
+          </div>
+          <p class="content-item-info">
+            A tantalizing blend of spicy tuna, cucumber, and avocado,
+            harmoniously rolled in nori and seasoned rice.
+          </p>
+        </div>
+      </div>
+      <div class="content-item">
+        <img
+          src="https://framerusercontent.com/images/QAnUAEBWAkCE4NM4Ja4aQy9Tu4.webp"
+          alt="spicy-tuna-maki"
+        />
+        <div class="content-item-info">
+          <div class="content-item-title-price">
+            <h3>SPICY TUNA MAKI</h3>
+          </div>
+          <p class="content-item-info">
+            A tantalizing blend of spicy tuna, cucumber, and avocado,
+            harmoniously rolled in nori and seasoned rice.
+          </p>
+        </div>
+      </div>
+      <div class="content-item">
+        <img
+          src="https://framerusercontent.com/images/QAnUAEBWAkCE4NM4Ja4aQy9Tu4.webp"
+          alt="spicy-tuna-maki"
+        />
+        <div class="content-item-info">
+          <div class="content-item-title-price">
+            <h3>SPICY TUNA MAKI</h3>
+          </div>
+          <p class="content-item-info">
+            A tantalizing blend of spicy tuna, cucumber, and avocado,
+            harmoniously rolled in nori and seasoned rice.
+          </p>
+        </div>
+      </div>
+      <div class="content-item">
+        <img
+          src="https://framerusercontent.com/images/QAnUAEBWAkCE4NM4Ja4aQy9Tu4.webp"
+          alt="spicy-tuna-maki"
+        />
+        <div class="content-item-info">
+          <div class="content-item-title-price">
+            <h3>SPICY TUNA MAKI</h3>
+          </div>
+          <p class="content-item-info">
+            A tantalizing blend of spicy tuna, cucumber, and avocado,
+            harmoniously rolled in nori and seasoned rice.
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 
-  <div id="specialrolls-section" class="specialrolls-section">
-    <h1>MAKI</h1>
-    <div class="specialrolls-content">
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
-      <h3>content</h3>
+  <div id="specialrolls-section" class="menu-food-section">
+    <div class="food-section-title">
+      <hr />
+      <h3>SPECIAL ROLLS</h3>
+      <hr />
+    </div>
+    <div class="content-section">
+      <div class="content-item">
+        <img
+          src="https://framerusercontent.com/images/QAnUAEBWAkCE4NM4Ja4aQy9Tu4.webp"
+          alt="spicy-tuna-maki"
+        />
+        <div class="content-item-info">
+          <div class="content-item-title-price">
+            <h3>SPICY TUNA MAKI</h3>
+          </div>
+          <p class="content-item-info">
+            A tantalizing blend of spicy tuna, cucumber, and avocado,
+            harmoniously rolled in nori and seasoned rice.
+          </p>
+        </div>
+      </div>
+      <div class="content-item">
+        <img
+          src="https://framerusercontent.com/images/QAnUAEBWAkCE4NM4Ja4aQy9Tu4.webp"
+          alt="spicy-tuna-maki"
+        />
+        <div class="content-item-info">
+          <div class="content-item-title-price">
+            <h3>SPICY TUNA MAKI</h3>
+          </div>
+          <p class="content-item-info">
+            A tantalizing blend of spicy tuna, cucumber, and avocado,
+            harmoniously rolled in nori and seasoned rice.
+          </p>
+        </div>
+      </div>
+      <div class="content-item">
+        <img
+          src="https://framerusercontent.com/images/QAnUAEBWAkCE4NM4Ja4aQy9Tu4.webp"
+          alt="spicy-tuna-maki"
+        />
+        <div class="content-item-info">
+          <div class="content-item-title-price">
+            <h3>SPICY TUNA MAKI</h3>
+          </div>
+          <p class="content-item-info">
+            A tantalizing blend of spicy tuna, cucumber, and avocado,
+            harmoniously rolled in nori and seasoned rice.
+          </p>
+        </div>
+      </div>
+      <div class="content-item">
+        <img
+          src="https://framerusercontent.com/images/QAnUAEBWAkCE4NM4Ja4aQy9Tu4.webp"
+          alt="spicy-tuna-maki"
+        />
+        <div class="content-item-info">
+          <div class="content-item-title-price">
+            <h3>SPICY TUNA MAKI</h3>
+          </div>
+          <p class="content-item-info">
+            A tantalizing blend of spicy tuna, cucumber, and avocado,
+            harmoniously rolled in nori and seasoned rice.
+          </p>
+        </div>
+      </div>
+      <div class="content-item">
+        <img
+          src="https://framerusercontent.com/images/QAnUAEBWAkCE4NM4Ja4aQy9Tu4.webp"
+          alt="spicy-tuna-maki"
+        />
+        <div class="content-item-info">
+          <div class="content-item-title-price">
+            <h3>SPICY TUNA MAKI</h3>
+          </div>
+          <p class="content-item-info">
+            A tantalizing blend of spicy tuna, cucumber, and avocado,
+            harmoniously rolled in nori and seasoned rice.
+          </p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
